# M2-csmi

./: .gitignore  2-1-Approfondissement-distributions-1D-Solutions.ipynb  Burgers_Equation_using_keras_tensorflow.ipynb  Dockerfile  README.md  analytical.py  cv.tex  pinn1d.py  train1d.csv
.devcontainer/: devcontainer.json
CO/: Start_Gekko.ipynb  TP2.ipynb  tp1.ipynb  tp3_Demuth_Axel.ipynb  tp_Demuth_Axel.ipynb
EDP/: Code_dm_Demuth_Axel.ipynb  TP2_Demuth_Axel.ipynb  dm.ipynb
ROM/: file.py
SCIml/: CorrectionTP1.py  TP1.ipynb  TP3.ipynb  TP3_demuth_axel.ipynb  correctionTP2.py  euler.py  tp2_noté.ipynb
Traitement_de_maillage/: ex_turek_occ.geo  squ.py  square.py  square_hole.py
Traitement_de_maillage/salome/: Study1.hdf  cubesalome.py  export_cube_trou.xao  export_cube_trou.xao.brep  first_file.py
cv/: cv.fdb_latexmk  cv.fls  cv.tex  cv2.fdb_latexmk  cv2.fls  cv2.tex  cv3.fdb_latexmk  cv3.fls  cv3.tex
incertitude/: Demuth_Axel_Burgers.ipynb  burgers.ipynb  présentation_Demuth_Axel.tex
incertitude/TP1-OpenTURNS Corriges-20241008/: 1-1-Point-Sample-Solution.ipynb  1-2-Distributions-Solution.ipynb  1-3-Fonctions-Solution.ipynb  1-4-RandomVector-Solution.ipynb  1-5-Exercice-Somme-de-deux-gaussiennes-Solution.ipynb  Krigeage-Solution.ipynb  Processus-gaussiens-Solution.ipynb
incertitude/TP2-Quantifications Enonces-20241008/: 2-1-Approfondissement-distributions-1D.ipynb  2-2-Ajustement-distribution-1D.ipynb  2-3-cantilever-beam-fit-distribution.ipynb  2-5-Exercice-copule-gaussienne.ipynb
pre_post/ex1/: CMakeLists.txt  main.cpp
sklearn-env/: pyvenv.cfg
(+28 files in other folders)
